# flutter_secure_storage

./: .gitignore  CHANGELOG.md  CHANGELOG.md~  README.md  analysis_options.yaml  melos.yaml  pubspec.yaml
.github/: dependabot.yml
.github/workflows/: flutter.yml  flutter_drive.yml
android/: build.gradle  settings.gradle
android/gradle/wrapper/: gradle-wrapper.properties
android/src/main/: AndroidManifest.xml
example/: .flutter-plugins-dependencies  .gitignore  README.md  pubspec.yaml
example/.dart_tool/: package_config.json  package_config_subset
example/android/: build.gradle
example/lib/: generated_plugin_registrant.dart  main.dart
example/test_driver/: app.dart  app_test.dart
example/windows/: CMakeLists.txt
flutter_secure_storage/: CHANGELOG.md  README.md  analysis_options.yaml  pubspec.yaml  pubspec_overrides.yaml
flutter_secure_storage/android/: build.gradle
flutter_secure_storage/example/: .gitignore  .metadata  README.md  analysis_options.yaml  pubspec.yaml
flutter_secure_storage/ios/: flutter_secure_storage.podspec
flutter_secure_storage/lib/: flutter_secure_storage.dart
flutter_secure_storage/linux/: flutter_secure_storage_plugin.cc
flutter_secure_storage/test/: flutter_secure_storage_unit_test.dart
flutter_secure_storage_linux/: CHANGELOG.md  LICENSE  README.md  pubspec.yaml
flutter_secure_storage_linux/example/: README.md  pubspec.yaml
flutter_secure_storage_linux/lib/: flutter_secure_storage_linux.dart
flutter_secure_storage_linux/linux/: CMakeLists.txt  flutter_secure_storage_linux_plugin.cc
flutter_secure_storage_linux/linux/include/: FHashTable.hpp  Secret.hpp
flutter_secure_storage_linux/linux/include/flutter_secure_storage_linux/: flutter_secure_storage_linux_plugin.h
flutter_secure_storage_linux/test/: flutter_secure_storage_linux_test.dart
flutter_secure_storage_macos/: CHANGELOG.md  README.md  pubspec.yaml
flutter_secure_storage_macos/lib/: flutter_secure_storage_macos.dart
flutter_secure_storage_macos/macos/: .gitignore  flutter_secure_storage_macos.podspec
flutter_secure_storage_macos/test/: flutter_secure_storage_macos_test.dart
flutter_secure_storage_platform_interface/: CHANGELOG.md  README.md  analysis_options.yaml  pubspec.yaml
flutter_secure_storage_platform_interface/lib/: flutter_secure_storage_platform.dart  flutter_secure_storage_platform_interface.dart
flutter_secure_storage_platform_interface/test/: flutter_secure_storage_platform_interface_mock.dart  flutter_secure_storage_platform_interface_test.dart
flutter_secure_storage_web/: CHANGELOG.md  README.md  analysis_options.yaml  pubspec.yaml
flutter_secure_storage_web/lib/: flutter_secure_storage_web.dart
flutter_secure_storage_windows/: .gitignore  .metadata  CHANGELOG.md  README.md  pubspec.yaml  pubspec_overrides.yaml
flutter_secure_storage_windows/example/: README.md  pubspec.yaml
flutter_secure_storage_windows/lib/: flutter_secure_storage_windows.dart
flutter_secure_storage_windows/test/: flutter_secure_storage_windows_test.dart  unit_test.dart
flutter_secure_storage_windows/windows/: CMakeLists.txt  flutter_secure_storage_windows_plugin.cpp
flutter_secure_storage_windows/windows/include/flutter_secure_storage_windows/: flutter_secure_storage_windows_plugin.h
ios/: flutter_secure_storage.podspec
ios/Classes/: FlutterSecureStoragePlugin.m
lib/: flutter_secure_storage.dart
linux/: CMakeLists.txt  flutter_secure_storage_plugin.cc
linux/include/: FHashTable.hpp  Secret.hpp
macos/: flutter_secure_storage.podspec
macos/Classes/: FlutterSecureStoragePlugin.h  FlutterSecureStoragePlugin.m
test/: flutter_secure_storage_test.dart
windows/: CMakeLists.txt  flutter_secure_storage_plugin.cpp
(+240 files in other folders)
